# s2

./: .gitignore  .s2allowlist  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  test_secrets.env
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
hooks/codex/: s2-awareness.md
hooks/cursor/: s2-rewrite.sh
hooks/opencode/: s2.ts
src/: audit.rs  cli.rs  config.rs  crypto.rs  error.rs  keychain.rs  main.rs  mask.rs  parser.rs  permissions.rs  store.rs
src/commands/: check.rs  decrypt.rs  edit.rs  encrypt.rs  exec.rs  hook.rs  init.rs  list.rs  migrate.rs  mod.rs  redact.rs  scan.rs  set.rs  unset.rs
src/provider/: cache.rs  env.rs  mod.rs  ssm.rs  vault.rs
tests/: check_test.rs  encrypted_test.rs  exec_test.rs  init_set_unset_test.rs  list_test.rs  migrate_test.rs  redact_test.rs  scan_test.rs
tests/fixtures/: basic.env
tests/reports/: scan-benchmark-2026-04-04.md
